--- a/app/src/main/res/layout/activity_radar.xml
+++ b/app/src/main/res/layout/activity_radar.xml
@@ -36,6 +36,36 @@
         app:fabSize="mini" />
 
 
-    
+    <RelativeLayout
+        android:id="@+id/layoutRadar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/radar" />
+
+        <ImageView
+            android:id="@+id/bubble1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="170dp"
+            android:layout_marginTop="155dp"
+            app:srcCompat="@drawable/bubble_red" />
+
+
+
+
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/tvCompass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:text="Compass=" />
 
 </android.support.design.widget.CoordinatorLayout>
