--- a/app/src/main/res/layout/activity_maps_button.xml
+++ b/app/src/main/res/layout/activity_maps_button.xml
@@ -66,5 +66,15 @@ tools:context="se.kth.mobdev.clubhunting.MapsActivity" >
             android:text="Radar" />
     </LinearLayout>
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="5dp"
+        android:adjustViewBounds="true"
+        android:maxHeight="30dp"
+        android:maxWidth="30dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/icon_target" />
 
 </FrameLayout>
