--- a/app/src/main/res/layout/activity_maps_button.xml
+++ b/app/src/main/res/layout/activity_maps_button.xml
@@ -69,8 +69,9 @@ tools:context="se.kth.mobdev.clubhunting.MapsActivity" >
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginLeft="5dp"
+
+        android:layout_marginTop="250dp"
+        android:layout_marginLeft="170dp"
         android:adjustViewBounds="true"
         android:maxHeight="30dp"
         android:maxWidth="30dp"
