--- a/app/src/main/res/layout/activity_radar.xml
+++ b/app/src/main/res/layout/activity_radar.xml
@@ -68,9 +68,9 @@
 
     <RelativeLayout
         android:id="@+id/layoutRadar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_width="360dp"
+        android:layout_height="360dp"
+        android:layout_marginTop="350dp"
         android:orientation="vertical">
 
         <ImageView
@@ -83,8 +83,8 @@
             android:id="@+id/bubble1"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="170dp"
-            android:layout_marginTop="150dp"
+            android:layout_marginLeft="155dp"
+            android:layout_marginTop="40dp"
             app:srcCompat="@drawable/bubble_red" />
 
 
