UI updated from Emmi's layouts

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/Details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="se.kth.mobdev.clubhunting.DetailsActivity">
@@ -9,70 +10,132 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"/>
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/common_google_signin_btn_text_dark_default"
+        app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
-    </android.support.design.widget.AppBarLayout>
-
-    <include layout="@layout/content_details" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="55dp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="name" />
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/relativelayout"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:contentDescription="TODO"
+                android:fadingEdge="vertical"
+                app:srcCompat="@drawable/sodrateatern" />
+
+
+            <TextView
+                android:id="@+id/tvName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="140dp"
+                android:background="@color/transparent_background"
+                android:shadowDx="1"
+                android:shadowDy="1"
+                android:shadowRadius="4"
+                android:text="  Södra Teatern"
+                android:textColor="#fff"
+                android:textSize="40sp" />
+
+        </RelativeLayout>
+
+        <Space
+            android:layout_width="1dp"
+            android:layout_height="30dp" />
+
 
         <TextView
             android:id="@+id/tvLocation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="location" />
+            android:layout_marginStart="18dp"
+            android:gravity="center"
+            android:text="Mosebacke torg 1"
+            android:textColor="#000"
+            android:textSize="20sp" />
+
+        <Space
+            android:layout_width="1dp"
+            android:layout_height="20dp" />
 
         <TextView
-            android:id="@+id/tvMusic"
+            android:id="@+id/tvOpeningHours"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Music" />
+            android:layout_marginStart="18dp"
+            android:gravity="center"
+            android:text="6 PM to 1 AM"
+            android:textColor="#000"
+            android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/tvMusicStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Music Style" />
+        <Space
+            android:layout_width="1dp"
+            android:layout_height="20dp" />
 
-        <TextView
-            android:id="@+id/tvRating"
-            android:layout_width="match_parent"
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            style="@android:style/Widget.DeviceDefault.Light.RatingBar"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Rating" />
+            android:layout_marginStart="60dp"
+            android:isIndicator="false"
+            android:numStars="5"
+            android:rating="4"
+            android:progressTint="@color/colorAccent"/>
 
         <TextView
             android:id="@+id/tvDescription"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Description" />
+            android:layout_margin="30dp"
+            android:text="Ornate 19th-century theater featuring touring rock, indie and jazz bands, plus live DJ club nights." />
+
+
     </LinearLayout>
 
 
-
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/btnNavigate"
+        android:layout_width="56dp"
+        android:layout_height="54dp"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_map" />
+        android:layout_margin="10dp"
+        app:backgroundTint="@color/colorAccent"
+        android:scaleType="center"
+        app:srcCompat="@android:drawable/ic_menu_directions" />
+
+
+    <ImageButton
+        android:id="@+id/imgBtnBack"
+        android:layout_width="40dp"
+        android:layout_height="55dp"
+        android:background="@color/common_google_signin_btn_text_dark_default"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:tint="@color/common_google_signin_btn_text_dark_focused"
+        app:srcCompat="?attr/actionModeCloseDrawable" />
+
 
 </android.support.design.widget.CoordinatorLayout>
+
