--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -32,7 +32,7 @@
             android:layout_height="fill_parent">
 
             <ImageView
-                android:id="@+id/image"
+                android:id="@+id/clubImage"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_alignParentStart="true"
@@ -101,8 +101,9 @@
             android:layout_marginStart="60dp"
             android:isIndicator="false"
             android:numStars="5"
+            android:progressTint="@color/colorAccent"
             android:rating="4"
-            android:progressTint="@color/colorAccent"/>
+            tools:clickable="false" />
 
         <TextView
             android:id="@+id/tvDescription"
